--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Press Me"
-            android:textColor="@color/white" />
+            android:textColor = "#000000"/>
 
     </com.borutsky.neumorphism.NeumorphicFrameLayout>
 
